--- a/2.Web/Homeworkshop/0818_workshop/pages/templates/pages/dinner.html
+++ b/2.Web/Homeworkshop/0818_workshop/pages/templates/pages/dinner.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>안녕하세요, {{name}}</h1>
+    <h2>저녁 메뉴</h2>
+    <h2>저녁 먹을 사람?! {{people}}명</h2>
+    <h2>어떤 메뉴?! {{menu}}</h2>
+    
 </body>
 </html>
