--- a/2.Web/Homeworkshop/0819_workshop/pages/templates/pages/card.html
+++ b/2.Web/Homeworkshop/0819_workshop/pages/templates/pages/card.html
@@ -2,18 +2,17 @@
 
 {% block content %}
 
-
-{% for article in articles %}
-    
-    <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="https://picsum.photos/200/300" alt="Random Image">
-    <div class="card-body">
-        <h5 class="card-title">{{ article.0 }}</h5>
-        <p class="card-text">{{ article.1 }}</p>
-        <a href="../community" class="btn btn-primary">Post Article</a>
-    </div>
-    </div>
-       
-{% endfor %}    
+<div class="row">
+    {% for article in articles %}
+        <div class="card col-4" style="width: 18rem;">
+            <img class="card-img-top" src="https://picsum.photos/200/300" alt="Random Image">
+        <div class="card-body">
+            <h5 class="card-title">{{ article.0 }}</h5>
+            <p class="card-text">{{ article.1 }}</p>
+            <a href="{% url 'pages:community' %}" class="btn btn-primary">Post Article</a>
+        </div>
+        </div>        
+    {% endfor %}    
+</div>
 
 {% endblock %}
