--- a/2.Web/4. JavaScript/01_javascript/ajax-practice/articles/templates/articles/index.html
+++ b/2.Web/4. JavaScript/01_javascript/ajax-practice/articles/templates/articles/index.html
@@ -9,20 +9,62 @@
     <p>글 번호: {{ article.pk }}</p>
     <p>글 제목: {{ article.title }}</p>
     <p>글 내용: {{ article.content }}</p>
-    <form action="{% url 'articles:like' article.pk %}" method="POST" class="d-inline">
+    <form class="d-inline like-form" data-article-id="{{ article.pk }}">
       {% csrf_token %}
       {% if user in article.like_users.all %}
         <button class="btn btn-link">
-          <i class="fas fa-heart fa-lg" style="color:crimson;"></i>
+          <i id="like-{{ article.pk }}" class="fas fa-heart fa-lg" style="color:crimson;"></i>
         </button>
       {% else %}
         <button class="btn btn-link">
-          <i class="fas fa-heart fa-lg" style="color:black;"></i>
+          <i id="like-{{ article.pk }}" class="fas fa-heart fa-lg" style="color:black;"></i>
         </button>
       {% endif %}
     </form>
-    {{ article.like_users.all|length }} 명이 이 글을 좋아합니다.<br>
+    <p>
+      <span id="like-count-{{ article.pk }}">
+        {{ article.like_users.all|length }} 명이 이 글을 좋아합니다.
+      </span>
+    </p>
     <a href="{% url 'articles:detail' article.pk %}">[detail]</a>
     <hr>
   {% endfor %}
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script>
+    const forms = document.querySelectorAll('.like-form')
+
+    forms.forEach(function (form) {
+      form.addEventListener('submit', function (event) {
+        event.preventDefault()
+        // console.log(event)
+        const articleId = event.target.dataset.articleId
+        const csrftoken = document.querySelector('[name=csrfmiddlewaretoken]').value
+
+        axios.post(`http://127.0.0.1:8000/articles/${articleId}/like/`, {}, {
+          headers: {
+            'X-CSRFToken': csrftoken
+          }}
+        )
+        .then(function (res) {
+          // console.log(res)
+          const count = res.data.count
+          const liked = res.data.liked
+          // console.log(count, liked)
+
+          const likeIconColor = document.querySelector(`#like-${articleId}`)
+          // console.log(likeIconColor)
+          const likeCount = document.querySelector(`#like-count-${articleId}`)
+          // console.log(likeCount)
+
+          likeCount.innerText = `${count} 명이 이 글을 좋아합니다.`
+
+          if (liked) {
+            likeIconColor.style.color = 'crimson'
+          } else {
+            likeIconColor.style.color = 'black'
+          }
+        })
+      })
+    })
+  </script>
 {% endblock %}
